included correct images, fixed project margins, aligned nav

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,10 +4,16 @@
   justify-content: space-evenly;
 }
 
+#nav-menu > a {
+  align-self: center;
+}
+
 #projects {
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
-  width: 90%;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .project {
@@ -15,15 +21,25 @@
   color: white;
   width: 40vw;
   display: flex;
+  flex-direction: column;
 }
 
+/* .projecty {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+} */
+
 .project-item {
-  
+  margin: 1.5rem 0.5rem;
 }
 
 .project-img {
   width: 40vw;
-  margin: 4rem 3rem;
+  height: 65vh;
+  /* margin: 4rem 3rem; */
+  /* flex: 1; */
 }
 
 main, .project:hover > section.project-info > * {
@@ -36,8 +52,8 @@ main, .project:hover > section.project-info > * {
 
 #projects section.project-info {
   position: absolute;
-  bottom: 70px;
-  right: -47px;
+  bottom: 28px;
+  right: -9px;
   background-color: black;
   height: 30%;
   overflow: hidden;
@@ -49,7 +65,7 @@ main, .project:hover > section.project-info > * {
 }
 
 .project-info > h1 {
-  margin-top: 14%;
+  margin-top: 7%;
   color: white;
   font-weight: bold;
 }
@@ -59,6 +75,7 @@ main, .project:hover > section.project-info > * {
   font-size: 0.6rem;
   font-weight: 100;
   letter-spacing: 0.1rem;
+  align-self: center;
 }
 
 .project-heading, .info {
@@ -75,7 +92,7 @@ main, .project:hover > section.project-info > * {
 }
 
 .info > span {
-  color: rgba(182, 182, 182, 0.9);
+  color: rgba(237, 235, 235, 0.9);
 }
 
 .info > span > em {
