--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,8 @@ a:hover, a:active {
 
 #logo {
   font-family: 'Electramaniacal', Arial, Helvetica, sans-serif;
-  font-size: 4rem;
-  height: 0;
-  top: 0;
-  margin-bottom: 1rem;
+  font-size: 8rem;
+  text-decoration: none;
 }
 
 .bright-text {
